# wechat-work-go

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  .travis.yml  BUILD.bazel  LICENSE  README.md  WORKSPACE  access_token.go  access_token_test.go  agent.go  agent_test.go  appchat_message.go  chat.go  chat_test.go  client.go  client_options.go  client_options_test.go  client_test.go  contact.go  contact_test.go  go.mod  go.sum  message.go  message_test.go  models.go  models_test.go  recipient.go  recipient_test.go  traits.go  user_info.go  user_info_helper.go  util.go  wechat_work_go_suite_test.go
agent/: BUILD.bazel  agent.go  agent_suite_test.go  agent_test.go  menu.go  model.go
cache/: BUILD.bazel  cache.go  memory.go
contact/: BUILD.bazel  contact.go  contact_suite_test.go  contact_test.go  department.go  model.go  tag.go
material/: BUILD.bazel  material.go  material_suite_test.go  material_test.go
message/: BUILD.bazel  README  app_message.go  app_message_test.go  appchat_message.go  group_chat.go  group_chat_message.go  group_chat_message_test.go  group_chat_test.go  message.go  message_suite_test.go
models/: BUILD.bazel  agent.go  appchat.go  contact.go  core.go  menu.go  message.go  tag.go  user.go
