load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    command = "fix",
    prefix = "github.com/dfang/wechat-work-go",
)

go_library(
    name = "go_default_library",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "github.com/dfang/wechat-work-go",
    visibility = ["//visibility:public"],
    deps = [
        "//models:go_default_library",
        "@in_gopkg_resty_v1//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = glob(
        ["*_test.go"],
    ),
    embed = [":go_default_library"],
    deps = [
        "//models:go_default_library",
        "@com_github_joho_godotenv//autoload:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@in_gopkg_resty_v1//:go_default_library",
    ],
)
