load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "contact.go",
        "department.go",
    ],
    importpath = "github.com/dfang/wechat-work-go/contact",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//models:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "contact_suite_test.go",
        "contact_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//:go_default_library",
        "//models:go_default_library",
        "@com_github_joho_godotenv//autoload:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
