load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "app_message.go",
        "group_chat_message.go",
        "message.go",
    ],
    importpath = "github.com/dfang/wechat-work-go/message",
    visibility = ["//visibility:public"],
    deps = ["//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "group_chat_message_test.go",
        "message_suite_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//:go_default_library",
        "//contact:go_default_library",
        "@com_github_joho_godotenv//autoload:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
