load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "agent.go",
        "contact.go",
        "core.go",
        "menu.go",
        "tag.go",
        "user.go",
    ],
    importpath = "github.com/dfang/wechat-work-go/models",
    visibility = ["//visibility:public"],
)
